<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HeaderText"
            android:text="@string/title" />

        <EditText
            android:id="@+id/enter_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderText"
            android:autofillHints="Name"
            android:hint="@string/name_entry"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapWords" />

        <ImageView
            android:id="@+id/main_imageView"
            style="@style/ImageStyle"
            android:src="@drawable/avengers1" />

        <Button
            android:id="@+id/start_button"
            style="@style/ButtonStyle"
            android:onClick="startQuiz"
            android:text="@string/begin_game" />

    </LinearLayout>

</ScrollView>
